# MPI-K-Means

./: CMakeLists.txt  README.md  benchmark.slurm  output.csv
.devcontainer/: Dockerfile
src/: main.cpp
src/mpi/: MPISolver.cpp  MPISolver.hpp
src/serial/: SerialSolver.cpp  SerialSolver.hpp
src/shared/: DataSet.cpp  DataSet.hpp  Instrumentation.cpp  Instrumentation.hpp  Logging.hpp  Point.cpp  Point.hpp  Timer.hpp  Utils.hpp
